# esp32-firmware

./: .gitignore  README.md  platformio.ini  pre-commit.sh
ESP32/: .clang-format  .clangd  .cproject  CMakeLists.txt  components.txt  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.old
ESP32/main/: CMakeLists.txt  calc_diff.S  camera.c  camera.h  http_website.c  http_website.h  idf_component.yml  includes.h  jpeg.cpp  jpeg.h  led.c  led.h  main.c  protocol_examples_common.h  rand_generatoc.c  server_reacher.c  server_reacher.h  soft_ap_sub.c  soft_ap_sub.h  softap_example_main.c  station_wifi.c  station_wifi.h  str.h  tls.c  tls.h  wifi_common.c  wifi_common.h
ESP32/main/JPEGDEC/: JPEGDEC.cpp  JPEGDEC.h  JPEGDisplay.h  my_cm4_simd.h
ESP32/main/certs_com/: ca_cert.crt  esp32_cert.crt
ESP32/main/modes/: normal_mode.c  normal_mode.h  setup_mode.c  setup_mode.h
ESP32/main/networking/: backend.c  backend.h  http_website.c  http_website.h  soft_ap_sub.c  soft_ap_sub.h  station_wifi.c  station_wifi.h  str_utility.h  wifi_common.c  wifi_provision.c  wifi_provision.h
ESP32/main/peripherals/: camera.c  camera.h  led.c  streaming.c  streaming.h
ESP32/main/utilities/: dns_hijack.c  dns_hijack.h  factory_reset.c  factory_reset.h  jpeg.cpp  jpeg.h  led.h  runtime.c  runtime.h  storage.c  storage.h  tls.c  tls.h
Windows App/: html_basic_parser.sln
Windows App/html_basic_parser/: html_basic_parser.cpp  html_basic_parser.vcxproj  html_basic_parser.vcxproj.filters
Windows App/html_basic_parser/x64/Release/: html_basic_parser.iobj  (+2 more)
Windows App/x64/Release/: bar.pdn
src/: main.cpp
(+7 files in other folders)
